cmake_minimum_required(VERSION 3.20)
project(advent_of_code_2024)

set(CMAKE_CXX_STANDARD 23)

add_executable(advent_of_code_2024_day1
        day-01/main.cpp
)

add_executable(advent_of_code_2024_day2
        day-02/main.cpp
)

add_executable(advent_of_code_2024_day2_get_line
        day-02-get-line/main.cpp
)

add_executable(advent_of_code_2024_day2_classes
        day-02-classes/main.cpp
)

add_executable(advent_of_code_2024_day3
        day-03/main.cpp
)